Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
     <link href="{{ site.baseurl }}/assets/css/components/menus.css" rel="stylesheet" type="text/css" />
     <link href="{{ site.baseurl }}/assets/css/components/tables.css" rel="stylesheet" type="text/css" />
     <link href="{{ site.baseurl }}/assets/css/components/code.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    
     <!-- Theme -->
     <link href="{{ site.baseurl }}/assets/css/theme/theme.css" rel="stylesheet" type="text/css" />
     <link href="{{ site.baseurl }}/assets/css/theme/breakpoints.css" rel="stylesheet" type="text/css" />
@@ -75,7 +77,7 @@
 
 	</body>
 	
-
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js" integrity="sha512-AYlzeu/5Cexb6uN6uQ0LfoRx33CgMticI4+eEsmPz9QxxyuLr0zd4MA+4hxLqISNs8769A+FVnBCuaMne6d0+w==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js" integrity="sha512-pdCVFUWsxl1A4g0uV6fyJ3nrnTGeWnZN2Tl/56j45UvZ1OMdm9CIbctuIHj+yBIRTUUyv6I9+OivXj4i0LPEYA==" crossorigin="anonymous"></script>
   <script type="text/javascript" src="{{site.base_url}}/assets/js/enquire.min.js"></script>
