--- a/assets/css/components/images.css
+++ b/assets/css/components/images.css
@@ -14,6 +14,9 @@ img.guide-example-image {
 
 #content iframe,
 #content img {
-  margin:10px auto;
   border:solid 1px #ddd;
+  display:block;
+}
+#content img {
+  cursor: zoom-in;
 }
