--- a/assets/css/components/images.css
+++ b/assets/css/components/images.css
@@ -14,6 +14,8 @@ img.guide-example-image {
 
 #content iframe,
 #content img {
+  border:solid 1px #ddd;
+  padding:1px;
   display:block;
   margin:10px auto;
 }
