--- a/assets/css/components/images.css
+++ b/assets/css/components/images.css
@@ -15,7 +15,8 @@ img.guide-example-image {
 #content iframe,
 #content img {
   border:solid 1px #ddd;
-  padding:2px;
+  border-radius:5px;
+  padding:5px;
   display:block;
   margin:10px auto;
 }
