--- a/assets/css/components/images.css
+++ b/assets/css/components/images.css
@@ -7,7 +7,7 @@ iframe {
   width:100%;
 }
 
-img.guide-example-image {
+#content img.guide-example-image {
   border-radius:5px;
   border:solid 1px #ddd;
   padding:0;
