--- a/assets/css/components/images.css
+++ b/assets/css/components/images.css
@@ -18,6 +18,7 @@ iframe {
 #content iframe,
 #content img {
   border:solid 1px #ddd;
+  border-radius:5px;
   padding:5px;
   display:block;
   margin:10px auto;
