Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -188,8 +188,7 @@ ul.guide-summary .detail {
   color: #000;
   padding:2px 5px;
 }
-#content a.pdf-icon,
-#content a.print-icon {
+#content .icon-group {
   float:right;
 }
 
