Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -71,9 +71,10 @@ layout: default
   }
 </script>
 
-<a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print fa-fw"></i></a>
-<a class="pdf-icon print-hidden" href="#" onclick="generatePDF();return false;"><i class="fa fa-file-pdf-o fa-fw"></i></a>
-
+<div class="icon-group">
+  <a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print fa-fw"></i></a>
+  <a class="pdf-icon print-hidden" href="#" onclick="generatePDF();return false;"><i class="fa fa-file-pdf-o fa-fw"></i></a>
+</div>
 
 
 
