--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -53,7 +53,7 @@ layout: default
 
 <div class="icon-group">
   <a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print fa-fw"></i></a>
-  <a class="pdf-icon print-hidden" href="#" onclick="generatePDF();return false;"><i class="fa fa-file-pdf-o fa-fw"></i></a>
+  <a class="generatePDF pdf-icon print-hidden" href="#" ><i class="fa fa-file-pdf-o fa-fw"></i></a>
 </div>
 
 
