Updated '_includes/social-icon.html' via CloudCannon

--- a/_includes/social-icon.html
+++ b/_includes/social-icon.html
@@ -1,28 +1,28 @@
 {% case include.icon %}
 	{% when "Facebook" %}
-    <i class="fa fa-fw fa-facebook"></i>
+    <i class="fa fa-fw fa-facebook-square"></i>
 	{% when "Instagram" %}
-    <i class="fa fa-fw fa-instagram"></i>
+    <i class="fa fa-fw fa-instagram-square"></i>
 	{% when "LinkedIn" %}
-    <i class="fa fa-fw fa-linkedin"></i>
+    <i class="fa fa-fw fa-linkedin-square"></i>
 	{% when "Pinterest" %}
-    <i class="fa fa-fw fa-pinterest"></i>
+    <i class="fa fa-fw fa-pinterest-square"></i>
 	{% when "Tumblr" %}
-    <i class="fa fa-fw fa-tumblr"></i>
+    <i class="fa fa-fw fa-tumblr-square"></i>
 	{% when "Twitter" %}
-    <i class="fa fa-fw fa-twitter"></i>
+    <i class="fa fa-fw fa-twitter-square"></i>
 	{% when "YouTube" %}
-    <i class="fa fa-fw fa-youtube"></i>
+    <i class="fa fa-fw fa-youtube-square"></i>
 	{% when "Github" %}
-    <i class="fa fa-fw fa-github"></i>
+    <i class="fa fa-fw fa-github-square"></i>
 	{% when "RSS" %}
-    <i class="fa fa-fw fa-rss"></i>
+    <i class="fa fa-fw fa-rss-square"></i>
 	{% when "Email" %}
-    <i class="fa fa-fw fa-email"></i>
+    <i class="fa fa-fw fa-email-square"></i>
 	{% when "Subscribe" %}
-    <i class="fa fa-fw fa-pencil"></i>
+    <i class="fa fa-fw fa-pencil-square"></i>
 	{% when "Share" %}
-    <i class="fa fa-fw fa-share"></i>
+    <i class="fa fa-fw fa-share-square"></i>
 	{% when "Close" %}
-    <i class="fa fa-fw fa-times"></i>
+    <i class="fa fa-fw fa-times-square"></i>
 {% endcase %}
