Updated '_includes/social-icon.html' via CloudCannon

--- a/_includes/social-icon.html
+++ b/_includes/social-icon.html
@@ -2,7 +2,7 @@
 	{% when "Facebook" %}
     <i class="fa fa-fw fa-facebook-square"></i>
 	{% when "Instagram" %}
-    <i class="fa fa-fw fa-instagram-square"></i>
+    <i class="fa fa-fw fa-instagram"></i>
 	{% when "LinkedIn" %}
     <i class="fa fa-fw fa-linkedin-square"></i>
 	{% when "Pinterest" %}
