Updated '_includes/social-icon.html' via CloudCannon

--- a/_includes/social-icon.html
+++ b/_includes/social-icon.html
@@ -18,7 +18,7 @@
 	{% when "RSS" %}
     <i class="fa fa-fw fa-rss-square"></i>
 	{% when "Email" %}
-    <i class="fa fa-fw fa-email-square"></i>
+    <i class="fa fa-fw fa-envelope"></i>
 	{% when "Subscribe" %}
     <i class="fa fa-fw fa-pencil-square"></i>
 	{% when "Share" %}
