Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 			{% endfor %}
 		</ul>
 		<p class="copyright">CPL Maker Lab {{ site.time | date: "%Y" }} | makerspace@chipublib.org | (312) 747-4300<br/>
-		400 S State St 3rd floor, Chicago, IL 60605 | <a target="_blank" href="https://app.cloudcannon.com/30680/editor#/site/82447/explore/">Admin</a><br/>
+		400 S State St 3rd floor, Chicago, IL 60605 | <a target="_blank" href="https://app.cloudcannon.com/30680/editor#/site/82447/explore/">Login</a><br/>
 		<a href="https://sites.google.com/site/cplmakerlab/" target="_blank">CPL Digital Toolbox Archive</a>
 		</p>
 	</div>
