Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
 					{{ link.name }}</a></li>
 			{% endfor %}
 		</ul>
-		<p>Email: makerspace@chipublib.org | Tel: (312) 747-4300 | 400 S State St 3rd floor, Chicago, IL 60605<br/>
+		<p>makerspace@chipublib.org | (312) 747-4300 | 400 S State St 3rd floor, Chicago, IL 60605<br/>
 		<a href="https://sites.google.com/site/cplmakerlab/" target="_blank">CPL Digital Toolbox Archive</a> | <a target="_blank" href="https://app.cloudcannon.com/30680/editor#/site/82447/explore/">Admin</a>
 		</p>
 	</div>
