Updated '_layouts/blog.html' via CloudCannon

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -16,7 +16,7 @@ layout: default
 </span>
 {% endif %}
 
-
-<a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print"></i></a>
-
+<div class="icon-group">
+  <a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print"></i></a>
+</div>
 
