--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="wrapper">
 		<p class="edit-footer"><a class="editor-link btn" href="cloudcannon:collections/_data/footer.yml" class="btn" style="padding: 5px;"><strong>&#9998;</strong> Edit footer</a></p>
 		<ul class="footer-links">
-			{% for link in site.data.footer %}
+			{% for link in site.data.footer.links %}
 				<li><a {% if link.new_window %}target="_blank"{% endif %} href="{% include relative-src.html src=link.link %}" {% if link.social_icon %}class="{{ link.social_icon }}-icon"{% endif %}>
 					{% if link.social_icon %}
 						{% include social-icon.html icon=link.social_icon %}
@@ -10,8 +10,6 @@
 					{{ link.name }}</a></li>
 			{% endfor %}
 		</ul>
-		<p>makerspace@chipublib.org | (312) 747-4300 | 400 S State St 3rd floor, Chicago, IL 60605<br/>
-		<a href="https://sites.google.com/site/cplmakerlab/" target="_blank">CPL Digital Toolbox Archive</a> | <a target="_blank" href="https://app.cloudcannon.com/30680/editor#/site/82447/explore/">Admin</a>
-		</p>
+    {{ site.data.footer.content_markdown }}
 	</div>
 </footer>
