--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,6 @@
 					{{ link.name }}</a></li>
 			{% endfor %}
 		</ul>
-    {{ site.data.footer.content_markdown }}
+    {{ site.data.footer.content }}
 	</div>
 </footer>
