--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -52,7 +52,7 @@ layout: default
 {% endif %}
 
 <div class="icon-group">
-  <a title="Download page as PDF" class="js-generate-pdf pdf-icon print-hidden" href="#" ><i class="fa fa-file-pdf-o fa-fw"></i></a>
+  <a title="{{- page.title | slugify -}}.pdf" class="js-generate-pdf pdf-icon print-hidden" href="#" ><i class="fa fa-file-pdf-o fa-fw"></i></a>
   <a title="Print page" class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print fa-fw"></i></a>
 </div>
 
