--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -23,8 +23,10 @@ ul.inline li {
   list-style-type: none;
   padding: 0 0.5em;
 }
-
+.slidedecks {
+  list-style-type:none;
+}
 .slidedecks li {
-  border-bottom:solid 1px #ddd;
   padding-bottom:10px;
+  border-left:solid 5px #ddd;
 }
