--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -27,7 +27,9 @@ ul.inline li {
   list-style-type:none;
 }
 .slidedecks li {
-  padding-bottom:10px;
-  padding-left:10px;
-  border-left:solid 5px #222;
+  padding:5px 10px;
+  border-left:solid 5px #444;
+}
+.slidedecks li:hover {
+  border-color:#FF5722;
 }
