Updated 'assets/css/components/lists.css' via CloudCannon

--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -26,10 +26,17 @@ ul.inline li {
 .slidedecks {
   list-style-type:none;
   margin:0;
+  padding:0;
 }
 .slidedecks li {
-  padding:5px 10px;
+  padding:20px;
   margin:0;
+  display:block;
+  height:200px;
+  width:200px;
+  border:solid #ddd 1px;
+  border-radius:5px;
+  float:left;
 }
 .slidedecks li:hover {
 }
