--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -3,7 +3,9 @@
  * See: assets/js/revealjs/dist/theme for more other theme styles
  */
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
-  color: #fff; }
+  color: #fff; 
+  background-color: rgba(0,0,0,.75);
+}
 
 section.full-background-slide h1,
 section.full-background-slide h2,
@@ -12,7 +14,7 @@ section.full-background-slide h4,
 section.full-background-slide h5,
 section.full-background-slide h6,
 section.full-background-slide p {
-  background-color: rgba(0,0,0,.75);
+  /*background-color: rgba(0,0,0,.75);*/
   color:#FFFFFF;
 }
 section.full-background-slide a {
