Updated 'assets/css/base/print.css' via CloudCannon

--- a/assets/css/base/print.css
+++ b/assets/css/base/print.css
@@ -51,7 +51,8 @@
   .print-only {
     display: block !important;
   }
-  .print-hidden {
+  .print-hidden,
+  .print-hidden.visible-xs {
     display:none !important;  
   }
   p {
