--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -4,7 +4,7 @@ layout: default
 {% if page.example_image %}
 <div class="guide-header row">
   <div class="col-sm-6">
-    <img class="guide-example-image" src="{{ page.example_image }}">
+    <img class="fancybox guide-example-image" src="{{ page.example_image }}">
   </div>
   <div class="col-sm-6">
     <ul class="guide-summary">
