Updated 'assets/css/screen.scss' via CloudCannon

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -1,6 +1,15 @@
 ---
 ---
 
+/**
+ * This Jekyll theme doesn't really use SASS, just regular CSS files (assets/css).
+ * 
+ * Leaving this here since CloudCannon has some SASS styles, and in case anybody in the future wishes
+ * to add more SASS (CSS preprocessor) or make use of variables. 
+ * Jekyll automatically scans and compiles .scss files it finds.
+ * More info: https://sass-lang.com/
+ */
+
 /* Dependencies can be found in the _sass directory */
 
 /* SASS variables */
