Updated 'assets/css/screen.scss' via CloudCannon

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -6,7 +6,7 @@
  * 
  * Leaving this here since CloudCannon has some SASS styles, and in case anybody in the future wishes
  * to add more SASS (CSS preprocessor) or make use of variables. 
- * Jekyll automatically scans and compiles .scss files it finds.
+ * Jekyll automatically scans and processes any .scss files when building the site.
  * More info: https://sass-lang.com/
  */
 
