--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -34,3 +34,10 @@ ul.inline li {
 }
 .slidedecks li:hover {
 }
+
+.list h4 {
+  transform: rotate(-90deg);
+  float:left;
+  margin:0;
+  padding:0;
+}
