--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -74,3 +74,9 @@ ul.inline li {
   border-bottom:solid 2px;
   margin:1px 0;
 }
+
+.list .tags a {
+  border:none;
+  padding:0;
+  font-style:italic;
+}
