Updated 'assets/css/components/lists.css' via CloudCannon

--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -58,7 +58,12 @@ ul.inline li {
 }
 
 .list h4 {
-  color: #888;
+  
+  /*color: #888;*/
+  background-color:#ddd;
+  border-radius:0 2px 2px 0;
+  color:#FFF;
+  padding:5px;
   font-size: 1.2rem;
   display: block;
   border: none;
