--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -85,3 +85,12 @@ ul.inline li {
   padding:0;
   font-style:italic;
 }
+
+#content .list .tags .tag-name, 
+.list .tags .tag-name {
+  border:none;
+  padding:0;
+  margin:0;
+  font-size:10px;
+}
+
