Updated 'assets/css/components/lists.css' via CloudCannon

--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -62,7 +62,7 @@ ul.inline li {
   /*color: #888;*/
   background-color:#ddd;
   border-radius:0 2px 2px 0;
-  color:#FFF;
+  color:#222;
   padding:5px;
   font-size: 1.2rem;
   display: block;
