Updated 'assets/css/components/lists.css' via CloudCannon

--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -68,6 +68,7 @@ ul.inline li {
   display: block;
   border: none;
   text-transform: uppercase;  
+  text-align:center;
 }
 .list ul {
   margin:0;
