--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -61,12 +61,13 @@ ul.inline li {
   
   /*color: #888;*/
   background-color:#ddd;
-  border-radius:0 2px 2px 0;
+  border-radius:0px 0px 500px 0px;
+  border-bottom:solid 1px #ccc;
+  border-left:solid 5px #ccc;
   color:#888;
-  padding:5px;
+  padding:5px 10px;
   font-size: 1.2rem;
   display: block;
-  border: none;
   text-transform: uppercase;  
   text-align:left;
   margin-left:-15px;
