--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -63,7 +63,7 @@ ul.inline li {
   background-color:#ddd;
   border-radius:0px 0px 500px 0px;
   border-bottom:solid 1px #ccc;
-  border-left:solid 5px #ccc;
+  border-left:solid 5px #1E88E5;
   color:#888;
   padding:5px 10px;
   font-size: 1.2rem;
