--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -61,7 +61,7 @@ ul.inline li {
   
   /*color: #888;*/
   background-color:#ddd;
-  border-radius:0px 0px 500px 0px;
+  border-radius:0px 0px 0 0;
   border-bottom:solid 1px #ccc;
   border-left:solid 5px #1E88E5;
   color:#888;
