Updated 'assets/css/components/lists.css' via CloudCannon

--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -58,7 +58,7 @@ ul.inline li {
 }
 
 .list h4 {
-  background-color:#ddd;
+  background-color:#ECEFF1;
   border-radius:0px 0px 0 0;
   border-bottom:solid 2px #ccc;
   border-left:solid 5px #1E88E5;
