--- a/assets/css/components/lists.css
+++ b/assets/css/components/lists.css
@@ -58,12 +58,13 @@ ul.inline li {
 }
 
 .list h4 {
-  background-color:#ECEFF1;
+  /*background-color:#ECEFF1;
   border-radius:0px 0px 0 0;
   border-bottom:solid 2px #ccc;
   border-left:solid 5px #1E88E5;
+  */
   color:#999;
-  padding:5px 10px;
+  /*padding:5px 10px;*/
   font-size: 1.2rem;
   display: block;
   text-transform: uppercase;  
