--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,14 +84,15 @@
 	
 
     <!-- Scripts -->
-    {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
-        <script>
-            window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-            ga('create', '{{ site.google_analytics_key }}', 'auto');
-            ga('send', 'pageview');
-        </script>
-        <script async src='https://www.google-analytics.com/analytics.js'></script>
-    {% endif %}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKLV8H5CGF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-JKLV8H5CGF');
+    </script>
     
 </html>
 
