Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-        
+    <meta name="google-site-verification" content="7geMBstBNbSIjJZnS_31SPVYIniWVILjqKnk7WwN_co" />        
+		
 		<link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/images/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/touch-icon.png" sizes="192x192">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon-32x32.png">
