Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -205,7 +205,9 @@ ul.guide-summary .detail {
   border-radius:5px;
 }
 
-
+.list .tags {
+  display:none;
+}
 #content .tags .tag-name,
 .tags .tag-name {
   border:solid 1px #ccc;
