Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -90,6 +90,11 @@
     opacity: 1;
     display: block;
   }
-
+  .list .tags {
+    max-width:100px;
+    overflow:hidden;
+    display:inline-block;
+    white-space:nowrap;  
+  }
 
 }
