--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -91,8 +91,10 @@
     display: block;
   }
   .list .tags {
-    display:inline;
+    display:block;
     white-space:nowrap;  
+    float:right;
+    width:100px;
   }
 
 }
