Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -91,10 +91,12 @@
     display: block;
   }
   .list .tags {
+    /*
     display:block;
     white-space:nowrap;  
     float:right;
     width:100px;
+    */
   }
 
 }
