Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -208,6 +208,9 @@ ul.guide-summary .detail {
 .list .tags {
   display:none;
 }
+.js-filter-hidden {
+  display:none;
+}
 #content .tags .tag-name,
 .tags .tag-name {
   border:solid 1px #ccc;
